tests/machine/x/ocaml/group_by_having.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_having.ml", line 13, characters 70-71:
13 |     __res0 := [("city",Obj.repr (g.key));("num",Obj.repr (List.length g))] :: !__res0
                                                                           ^
Error: This expression has type ('a, 'b) group
       but an expression was expected of type 'c list


Context (around line 13):
  11 |   List.iter (fun (gKey,gItems) ->
  12 |     let g = { key = gKey; items = List.rev gItems } in
  13 |     __res0 := [("city",Obj.repr (g.key));("num",Obj.repr (List.length g))] :: !__res0
  14 |   ) !__groups0;
  15 |   List.rev !__res0)
